--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,10 @@
 hs_err_pid*
 target/
 idea/
-project/
+project/target
 .bsp/
 .idea/
+/project/project/target/config-classes/
 
 .DS_Store
 .idea/workspace.xml
